apps/niks3/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: niks3
  namespace: niks3
  labels:
    app: niks3

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: niks3
  template:
    metadata:
      labels:
        app: niks3
    spec:
      restartPolicy: Always
      securityContext:
        fsGroup: 65534
        runAsUser: 65534
        runAsNonRoot: true
      containers:
        - name: niks3
          image: ghcr.io/mic92/niks3:v1.4.0
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 5751
              name: http
          volumeMounts:
            - name: niks3-signing-key
              mountPath: /secrets
              readOnly: true
      volumes:
        - name: niks3-signing-key
          secret:
            secretName: niks3-secrets
            items:
              - key: signing-key
                path: signing-key
