apps/niks3/http-route-s3.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: s3
  namespace: niks3
  annotations:
    item.homer.rajsingh.info/name: "Garage S3"
    item.homer.rajsingh.info/subtitle: "S3 Endpoint"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/webp/garage.webp"
    service.homer.rajsingh.info/name: "System"
    service.homer.rajsingh.info/icon: "fas fa-cogs"

spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "s3.prosto.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: garage-niks3
          port: 3900
